[package]
name = "bft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bft_types = { path = "bft_types" }
bft_interp = { path = "bft_interp" }
clap = { version = "4.4.18", features = ["derive"] }
rstest = "0.18.2"

[workspace]
members=[
    "bft_types",
    "bft_interp",
]


