[package]
name = "bft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]  # daniel suggested these would be better in dev-dependencies but if I try it complains
bft_types = { path = "bft_types" }
bft_interp = { path = "bft_interp" }

#[dependencies]
clap = { version = "4.4.18", features = ["derive"] }

[workspace]
members=[
    "bft_types",
    "bft_interp",
]


